crates/plotnik-tests/tests/03-analyze/self_recursion/no_progress_right_recursion.txt
E = [
  (x)
  (E)
]
------------------ DIAGNOSTICS -------------------
error: infinite recursion: cycle makes no progress
 --> query.ptk:3:4
  |
3 |   (E)
  |    ^
  |    |
  |    references itself
  |
help: match at least one syntax-tree node before recursing
-------------------- SYMBOLS ---------------------
E
  E (cycle)
